# chai

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  conanfile.txt
Interfaces/: CMakeLists.txt  chessmachine.h
src/: CMakeLists.txt  Chai.sln
src/ChessEngineGreedy/: CMakeLists.txt  ChessEngineGreedy.cpp  ChessEngineGreedy.vcxproj  ChessEngineGreedy.vcxproj.filters  ReadMe.txt  engine.cpp  engine.h  greedyengine.h  stdafx.cpp  stdafx.h
src/ChessEngineGreedyTest/: CMakeLists.txt  TestGreedyEngine.cpp
src/ChessMachine/: CMakeLists.txt  machine.cpp  machine.h  state.cpp  state.h
src/ChessMachineTest/: BoostUnitTestChessMachine.cpp  CMakeLists.txt  ChessMachineTest.vcxproj  ChessMachineTest.vcxproj.filters  TestChessMachine.cpp  machinetestutils.h  stdafx.h
src/Common/: machinetestutils.h
src/GreedyEngineTest/: GreedyEngineTest.vcxproj  GreedyEngineTest.vcxproj.filters  TestGreedyEngine.cpp  stdafx.h
src/Interfaces/: chessmachine.h
src/StaticTest/: StaticTest.vcxproj  StaticTest.vcxproj.filters  lint-test.bat
src/UciProxy/: UciProxy.vcxproj  UciProxy.vcxproj.filters  stdafx.cpp  stdafx.h  uciproxy.cpp  uciproxy.h
src/Version/: version.h  version.rc
src/chess/: chess.cpp  chess.h  chess.qrc  chess.ui  chess.vcxproj  chess.vcxproj.filters  chessboard.cpp  chessboard.h  chessboard.ui  main.cpp  promotiondlg.cpp  promotiondlg.h  promotiondlg.ui
src/chessmachine/: chessmachine.cpp  chessmachine.h  chessmachine.vcxproj  chessmachine.vcxproj.filters  machine.cpp  machine.h  state.cpp  state.h  stdafx.cpp  stdafx.h
